kubernetes/projects/applications/apps/devfeed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devfeed-web
  namespace: devfeed
  labels:
    app.kubernetes.io/part-of: devfeed
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: devfeed.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devfeed-web
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devfeed-admin
  namespace: devfeed
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: devfeed-devfeed-admin-https@kubernetescrd
  labels:
    app.kubernetes.io/part-of: devfeed
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - admin.devfeed.home
      secretName: devfeed-admin-tls
  rules:
    - host: admin.devfeed.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devfeed-admin
                port:
                  number: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: devfeed-admin-https
  namespace: devfeed
  labels:
    app.kubernetes.io/part-of: devfeed
spec:
  redirectScheme:
    scheme: https
    permanent: true
